test config tfstage - s3

--- a/terraform-stage-s3/config/hml.conf
+++ b/terraform-stage-s3/config/hml.conf
@@ -1,4 +1,4 @@
 bucket  = "s3-lab-azure-devops"
-key     = "msk-kafka/terraform.tfstate"
+key     = "terraform.tfstate"
 region  = "us-east-1"
-profile = "hml"
+profile = "lab-terraform2"
